# learn-directx12-with-rust

./: Cargo.toml  README.md
hello_triangle/: Cargo.toml
hello_triangle/src/: command_line.rs  dx_sample.rs  main.rs
hello_triangle/src/app/: hello_triangle.rs  mod.rs
hello_triangle/src/bindings/: adapter.rs  devices.rs  mod.rs
hello_triangle/src/helpers/: memory_dbg_helper.rs  mod.rs
notes/: 1.md
